k8s/app-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app-ns
  labels:
    apps: web-based
  annotations:
    type: demo
