k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: authen-go-grpc
          image: 911481394558.dkr.ecr.us-east-1.amazonaws.com/task-app/authen-go:1.0
          command: ["serve", "grpc"]
          ports:
            - containerPort: 8080
        - name: authen-go-http
          image: 911481394558.dkr.ecr.us-east-1.amazonaws.com/task-app/authen-go:1.0
          command: ["serve", "http"]
          ports:
            - containerPort: 8081
