k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      component: db
  template:
    metadata:
      labels:
        component: db
    spec:
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: task-pvc
      containers:
        - name: db
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "512Mi"
