k8s/auth-services.yml
apiVersion: v1
kind: Service
metadata: 
  name: auth-svc
  namespace: app-ns
spec:
  type: LoadBalancer
  selector:
    component: api
  ports:
    - port: 8081
      targetPort: 8081
