k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: app-ns
spec:
  type: ClusterIP
  selector:
    component: db
  ports:
    - port: 3306
      targetPort: 3306
