k8s/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: app-ns
spec:
  ingressClassName: nginx
  rules:
    - host: test.tonytran.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port: 
                  number: 8081
